--- a/.env
+++ b/.env
@@ -1,5 +1,17 @@
+# production
+
 PORT = 3000
-DB_HOST=localhost
-DB_USER=tinashe
-DB_PASSWORD=Lostboykal69
-DATABASE=knowledgebase
+DB_HOST=roundhouse.proxy.rlwy.net:23677
+DB_USER=root
+DB_PASSWORD=ae1515AHFdA1A5DAe1cdacHe1FDceBdb
+DATABASE=railway
+
+# mysql://root:ae1515AHFdA1A5DAe1cdacHe1FDceBdb@roundhouse.proxy.rlwy.net:23677/railway
+
+
+# Dev
+# PORT = 3000
+# DB_HOST=localhost
+# DB_USER=tinashe
+# DB_PASSWORD=Lostboykal69
+# DATABASE=knowledgebase
