--- a/.env
+++ b/.env
@@ -1,10 +1,11 @@
 # production
 
 PORT = 3000
-DB_HOST=roundhouse.proxy.rlwy.net:23677
+DB_HOST=roundhouse.proxy.rlwy.net
 DB_USER=root
 DB_PASSWORD=ae1515AHFdA1A5DAe1cdacHe1FDceBdb
 DATABASE=railway
+DB_PORT=23677
 
 # mysql://root:ae1515AHFdA1A5DAe1cdacHe1FDceBdb@roundhouse.proxy.rlwy.net:23677/railway
 
