--- a/.env
+++ b/.env
@@ -1,14 +1,13 @@
 # production
 
-PORT = 3000
-DB_HOST=roundhouse.proxy.rlwy.net
-DB_USER=root
-DB_PASSWORD=ae1515AHFdA1A5DAe1cdacHe1FDceBdb
-DATABASE=railway
-DB_PORT=23677
+# PORT = 3000
+# DB_HOST=roundhouse.proxy.rlwy.net
+# DB_USER=root
+# DB_PASSWORD=ae1515AHFdA1A5DAe1cdacHe1FDceBdb
+# DATABASE=railway
+# DB_PORT=23677
 
 # mysql://root:ae1515AHFdA1A5DAe1cdacHe1FDceBdb@roundhouse.proxy.rlwy.net:23677/railway
-
 
 # Dev
 # PORT = 3000
@@ -16,3 +15,10 @@ DB_PORT=23677
 # DB_USER=tinashe
 # DB_PASSWORD=Lostboykal69
 # DATABASE=knowledgebase
+
+# Hosting On Render
+PORT = 5000
+DB_HOST=localhost
+DB_USERNAME=root
+DB_PASSWORD=""
+DB_DBNAME=knowledgebase
