--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+# RAILWAY
 # production
 
 # PORT = 3000
@@ -16,9 +17,18 @@
 # DB_PASSWORD=Lostboykal69
 # DATABASE=knowledgebase
 
+# RENDER
 # Hosting On Render
+# Dev
+# PORT = 5000
+# DB_HOST=localhost
+# DB_USERNAME=root
+# DB_PASSWORD=""
+# DB_DBNAME=knowledgebase
+
+# production
 PORT = 5000
-DB_HOST=localhost
-DB_USERNAME=root
-DB_PASSWORD=""
-DB_DBNAME=knowledgebase
+DB_HOST=bfkxowedxbs0cnngwvhf-mysql.services.clever-cloud.com
+DB_USERNAME=uvrmku4eyd16thaw
+DB_PASSWORD=DB_PASSWORD
+DB_DBNAME=bfkxowedxbs0cnngwvhf
