--- a/.env
+++ b/.env
@@ -27,8 +27,8 @@
 # DB_DBNAME=knowledgebase
 
 # production
-PORT = 5000
+PORT = 3306
 DB_HOST=bfkxowedxbs0cnngwvhf-mysql.services.clever-cloud.com
 DB_USERNAME=uvrmku4eyd16thaw
-DB_PASSWORD=DB_PASSWORD
+DB_PASSWORD=86bwKZ4f8kD4xkXaeAE5
 DB_DBNAME=bfkxowedxbs0cnngwvhf
